--- a/TestModule/packages.config
+++ b/TestModule/packages.config
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Discord.Net" version="2.1.1" targetFramework="net461" />
-  <package id="Discord.Net.Commands" version="2.1.1" targetFramework="net461" />
-  <package id="Discord.Net.Core" version="2.1.1" targetFramework="net461" />
-  <package id="Discord.Net.Rest" version="2.1.1" targetFramework="net461" />
-  <package id="Discord.Net.Webhook" version="2.1.1" targetFramework="net461" />
-  <package id="Discord.Net.WebSocket" version="2.1.1" targetFramework="net461" />
+  <package id="Discord.Net" version="2.2.0" targetFramework="net461" />
+  <package id="Discord.Net.Commands" version="2.2.0" targetFramework="net461" />
+  <package id="Discord.Net.Core" version="2.2.0" targetFramework="net461" />
+  <package id="Discord.Net.Rest" version="2.2.0" targetFramework="net461" />
+  <package id="Discord.Net.Webhook" version="2.2.0" targetFramework="net461" />
+  <package id="Discord.Net.WebSocket" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
@@ -25,13 +25,14 @@
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net461" />
-  <package id="System.Interactive.Async" version="3.2.0" targetFramework="net461" />
+  <package id="System.Interactive.Async" version="4.0.0" targetFramework="net461" />
   <package id="System.IO" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
+  <package id="System.Linq.Async" version="4.0.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
